Thu Jan 22 00:26:25 2004  Siena.  <siena@faculty.chiba-u.jp>

	* ChangeLog: typo: RUBY_MBCHAR_MAX was RUBY_MBCHAR_MAXSIZE.

Thu Jan 22 00:12:51 2004  Siena.  <siena@faculty.chiba-u.jp>

	* defines.h: define RUBY_MBCHAR_MAX instead of MB_CUR_MAX.
	* dir.c (Next, emx_mblen): use RUBY_MBCHAR_MAX for mblen().
	* file.c (CharNext): ditto.
	* ruby.c (translate_char): ditto.
	* util.c (__crt0_glob_function): ditto.

Thu Jan 22 00:10:01 2004  Dave Thomas  <dave@pragprog.com>

	* lib/base64.rb: :nodoc: the Deprecated module

Wed Jan 21 23:52:39 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: Interix(SFU) support.

Wed Jan 21 23:03:45 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: remove O_NONBLOCK, thanks \ay
	* lib/drb/extserv.rb: typo

Wed Jan 21 17:57:56 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (envelope): allow NIL.
	* lib/net/imap.rb (body): ditto.
	* lib/net/imap.rb (number): ditto.
	* lib/net/imap.rb (ensure_nz_number): show a detailed error
	message.

Wed Jan 21 16:44:15 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (merge_libs): squeeze successive same libraries.
	  [ruby-dev:22652]

Wed Jan 21 16:10:36 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/base64.rb: enclosed in a module.  [ruby-core:02285]

Wed Jan 21 16:01:26 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/rmd160/extconf.rb: have_library appends found library.

Tue Jan 20 14:48:28 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/extconf.rb: should check <openssl/conf_api.h> instead
	  of OPENSSL_VERSION_NUMBER. [ruby-list:39056]

Tue Jan 20 14:43:17 2004  Dave Thomas  <dave@pragprog.com>

	* lib/base64.rb: Add RDoc

Tue Jan 20 14:25:51 2004  Dave Thomas  <dave@pragprog.com>

	* lib/abbrev.rb: Add RDoc

Tue Jan 20 13:22:39 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Document aliases at
	  top-most level.

	* lib/English.rb: Document English.rb.
